jesus fucking christ how much time did I waste on this shit

--- a/tex/projektbericht_schläger.tex
+++ b/tex/projektbericht_schläger.tex
@@ -154,6 +154,7 @@ Da für jede Funktionale Abhhängigkeit $f \in F$ gilt, dass die Domäne von $f$
 Korrekturen, die für diesen Teil an der Modellierung vorgenommen wurden:
 \begin{itemize}
 	\item Beziehung "Song kombiniert zu Setlist" wurde von einer 1-N Beziehung in eine N-M Beziehung transformiert. Dies ist ein Ergebnis dessen, dass Löschregeln sonst semantisch nicht sinnvol definiert werden könnten.
+	\item In der Relation \texttt{Song} wurde ein Attribut \texttt{Position} hinzugefügt, da dies in der Modellierung vergessen wurde, aber von semantisch großer Relevanz ist.
 \end{itemize}
 
 \subsection{Keine Cascade Zyklen}
